# GaTORS

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md  package.xml
config/: params.yaml
docs/: README.md  _config.yml
include/gators/: agents.hpp  board.hpp  common.h  game_manager.hpp  game_player.h  game_visualizer.h  mcts.hpp  point.h
launch/: load_game.launch.py
models/clouds/: info.txt
rviz/: config.rviz
src/: agents.cpp  board.cpp  game_manager.cpp  game_player.cpp  game_visualizer.cpp  mcts.cpp
